2013-11-22  Kaz Kylheku  <kaz@kylheku.com>

	* genvim.txr: Change how the hard-coded symbols (end, and, or) are
	* added, and also add the missing rep to these.

	* txr.vim: Regenerated.

2013-11-21  Kaz Kylheku  <kaz@kylheku.com>

	Version 70

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated.

2013-11-21  Kaz Kylheku  <kaz@kylheku.com>

	Nasty bug fixed: @(accept) from inside a @(collect) was found not to
	propagate bindings. The culprit?  The bindings_coll variable in the
	v_collect function being indeterminate by the well-documented and
	understood action of setjmp.  Marking the bindings_coll variable
	volatile instantly fixed it.  I reviewed this code to find any other
	instance of this oversight.

	* match.c (v_skip, v_collect): Mark some local variable volatile:
	precisely those which are used after possibly returning via an
	unwind, and which might have been modified since setting up
	the unwind block.

2013-11-05  Kaz Kylheku  <kaz@kylheku.com>

	* genvim.txr: Handle symbols whose C names end with _star_s,
	and also ones with underscores.

	* txr.vim: Updated.

2013-10-28  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile (clean): depends on conftest.clean
	(conftest.clean): New target.

	* configure: Use "make conftest.clean" to clean up conftest stuff. Note
	that there was a bug here: brace expansion was used, but the shell is
	/bin/sh, so conftest.err wasn't being removed.

2013-10-27  Kaz Kylheku  <kaz@kylheku.com>

	Fix 2013-10-06 regression in op syntax.  This happens when a @var
	syntax appears in an op form, crashing the expander with infinite
	recursion at program load time, before the code is run.

	* eval.c (transform_op): The fi == var check to handle a
	trailing op variable in the dot position of a form
	needs to ensure that it really is @<num> type var, and
	not the @<sym> type for instance.

2013-10-27  Kaz Kylheku  <kaz@kylheku.com>
